--- a/.env.example
+++ b/.env.example
@@ -26,7 +26,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=project
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=test123
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
@@ -48,13 +48,13 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=log
-MAIL_HOST=127.0.0.1
+MAIL_MAILER=smtp
+MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=d12c060ee2e660
+MAIL_PASSWORD=d24be5b5d82589
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="brent.test@gmail.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
